--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,13 @@
 			<h1>Paula<br />Burghelea</h1>
 		</hgroup>
 	</header>
-	<section class="profile">
-		<h3>Profile</h3>
-		<p>
-			“Any fool can write code that a computer can understand. Good programmers write code that humans can
+	<section class="profile scroll-reveal">
+		<h3 class="profile-title"><span>Profile</span></h3>
+		<p class="profile-text">
+			<span>“Any fool can write code that a computer can understand. Good programmers write code that humans can
 			understand.”
 			― Martin Fowler
+			</span>
 		</p>
 	</section>
 	<section class="work-experience">
@@ -219,8 +220,10 @@
 	</section>
 	<section class="skills">
 		<h3>Skills</h3>
-		<ul>
-			<li>HTML5, SVG &amp; XML</li>
+		<ul class="scroll-reveal">
+
+				<li>HTML5, SVG &amp; XML</li>
+			
 			<li>CSS3, Saas</li>
 			<li>Bootstrap, Tailwind CSS</li>
 			<li>JavaScript(ES6) and RESTful APIs</li>
@@ -234,6 +237,7 @@
 			<li>Email: SMTP, DNS, Deliverability &amp; Spam Filtering</li>
 			<li>SMPP &amp; Voice</li>
 			<li>Google Docs &amp; Microsoft Office</li>
+
 		</ul>
 	</section>
 	<section class="languages">
