--- a/templates/master.html
+++ b/templates/master.html
@@ -134,11 +134,14 @@
 				<h2>Hi! I am a Full Stack Developer</h2>
 				<p>
 					and since 2021 I am bringing web app ideas to life.
-					I am using JavaScript (React or Vue as a framework), Express/Next, MySql, and RestAPIs, and can create UI design using FIGMA.
-					I spend a good amount of time trying to get the visual aspect I desire but also find working on the back-end or building/testing APIs quite rewarding.
-					Each day I strive to be a trusted developer and I am currently working as a freelancer.
+					Some of my stack includes JavaScript/TS (React or Vue), WebGL, Three.js, Express/Next, MySql, MongoDB RestAPIs, and FIGMA to create/read UI Design.
+					I like to tweak things until I get the visual aspect I desire but I also find working on the back-end or building/testing APIs quite rewarding.
+					I am currently trying to work as a freelancer but am also open to a role at the right company.
 				</p>
-				<button id="cvButton">View CV</button>
+				<div class="btnContainer">
+					<button id="cvButton">Portfolio</button>
+				</div>
+				
 			</div>
 			<div class="header-img">
 				<img class="person" src="./assets/header/person.png" />
