--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,22 +1,22 @@
 form {
 	width: 100%;
-	height: 100%;
-	padding: 30px;
 	display: flex;
-	gap: 10px;
-	flex-direction: column;
-	justify-content: center;
-	align-items:first baseline;
+	flex-direction: row;
+	justify-content: flex-start;
+
 }
 
 form div {
-	width: 40%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
-	gap: 5px;
+	gap: 10px;
 }
 
-button {
-	width: 20%;
-	border-radius: 10px;
+textarea {
+	height: 300px;
+}
+
+.form-left {
+	align-items: flex-end;
 }
