--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -224,15 +224,7 @@ header > section {
 }
 
 .header-img {
-	position: relative;
-
-	max-width: 450px;
-
-	margin: 200px auto 0;
-
-	/* flex-grow: 1; */
-	z-index: 2;
-	aspect-ratio: 1;
+	display: none;
 }
 
 .header-img > img {
@@ -257,7 +249,6 @@ header > section {
 	width: 100%;
 	height: 100%;
 	object-fit: contain;
-
 	top: -4%;
 	left: 34%;
 	z-index: 9;
@@ -265,7 +256,6 @@ header > section {
 
 .header-img .romania {
 	width: 35%;
-
 	top: 25%;
 	left: 6%;
 	z-index: 9;
@@ -361,11 +351,18 @@ header > section {
 	z-index: 8;
 }
 
+.btnContainer {
+	width: 100%;
+	padding-top: var(--section-margin);
+	display: grid;
+	place-items: center;
+}
+
 #cvButton {
 	font-size: 1.5rem;
-
-	margin: var(--padding);
-	width: 245px;
+	margin: var(--margin);
+	padding: auto;
+	width: 215px;
 	height: 87px;
 	border-radius: 45px;
 }
@@ -509,4 +506,10 @@ footer {
 	bottom: 0;
 	position: fixed;
 	width: 100%;
+}
+
+form {
+	flex-wrap: wrap-reverse;
+	height: 100%;
+	gap: 10px;
 }
