--- a/public/css/wide.css
+++ b/public/css/wide.css
@@ -29,14 +29,23 @@ header > section {
 	width: 130%;
 }
 
+.btnContainer {
+	padding-top: 0;
+}
 #cvButton {
-	width: 330px;
+	width: 300px;
 	height: 95px;
-	font-size: 2rem;
+	font-size: 2.3rem;
 }
 
 .header-img {
-	margin: var(--padding) auto 0;
+	display: block;
+	position: relative;
+	max-width: 450px;
+	margin: 200px auto 0;
+	/* flex-grow: 1; */
+	z-index: 2;
+	aspect-ratio: 1;
 }
 
 article {
@@ -194,4 +203,8 @@ article .education {
 .header-img .leaf-02,
 .header-img .leaf-01 { 
 	max-height: 9%;
+}
+
+form {
+	flex-wrap: nowrap;
 }
